[package]
name = "monk"
version = "0.1.2"
authors = ["Sergey Golovin <sergey.golovin@protonmail.com>"]
edition = "2021"
license = "MIT"
description = "Monk is a simple Git hooks manager written in Rust. It allows you to manage and automate Git hooks easily using a YAML configuration file."
readme = "README.md"
homepage = "https://github.com/daynin/monk"
repository = "https://github.com/daynin/monk"
keywords = ["cli", "git", "git-hooks"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_yaml = "0.9.34"

[dev-dependencies]
clippy = "0.0.302"
rustfmt = "0.10.0"

[lib]
name = "monk"
path = "src/lib.rs"

[[bin]]
name = "monk"
path = "src/main.rs"
